--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "There's a ton of great Eleventy starter kits out there but they're pretty opinionated about their features and dependencies. 11ty.recipies helps you build an Eleventy site from scratch, showing you how to add individual features like a SASS pipeline or image sprite generation.",
   "main": ".eleventy.js",
   "scripts": {
-    "watch:sass": "sass --watch _src/sass:_src/css",
-    "build:sass": "sass _src/sass:_src/css",
+    "watch:sass": "sass --no-source-map --watch _src/sass:_site/css",
+    "build:sass": "sass --no-source-map _src/sass:_site/css",
     "watch:eleventy": "eleventy --serve",
     "build:eleventy": "eleventy",
     "start": "npm-run-all build:sass --parallel watch:*",
